--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -159,7 +159,7 @@ $odd-bg-color: #f6f2ef;
 $input-color: $text-color;
 $input-color-active: #000;
 $input-line-height: 20px;
-$input-font-size: 15px;
+$input-font-size: 12px;
 $input-height: 30px;
 $input-height-small: 20px;
 $input-bg: #ffffff;
@@ -168,8 +168,7 @@ $input-border-color: $input-color;
 $input-border-color-active: $color-primary;
 $input-box-shadow-active: none;
 $input-border-radius: 0;
-$input-padding-y: 10px;
-$input-padding-x: 10px;
+$input-padding: 8px 12px;
 
 $legend-color: $color-gray-dark;
 
